--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -13,7 +13,7 @@
             app:destination="@id/detailsFragment" />
         <action
             android:id="@+id/action_mainFragment_to_manageProgramFragment"
-            app:destination="@id/manageProgramFragment" />
+            app:destination="@id/ManagePrograms" />
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
@@ -59,33 +59,36 @@
             app:argType="string"
             app:nullable="true" />
     </fragment>
-    <fragment
-        android:id="@+id/manageProgramFragment"
-        android:name="com.saboon.timetable.Fragments.ManageProgramFragment"
-        android:label="fragment_manage_program"
-        tools:layout="@layout/fragment_manage_program" >
-        <action
-            android:id="@+id/action_manageProgramFragment_to_mainFragment"
-            app:destination="@id/mainFragment"
-            app:popUpTo="@id/mainFragment"
-            app:popUpToInclusive="true"
-            app:popUpToSaveState="true"/>
-        <action
-            android:id="@+id/action_manageProgramFragment_to_editProgramFragment"
-            app:destination="@id/editProgramFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/editProgramFragment"
-        android:name="com.saboon.timetable.Fragments.EditProgramFragment"
-        android:label="fragment_edit_program"
-        tools:layout="@layout/fragment_edit_program" >
-        <action
-            android:id="@+id/action_editProgramFragment_to_manageProgramFragment"
-            app:destination="@id/manageProgramFragment"
-            app:popUpTo="@id/manageProgramFragment"
-            app:popUpToInclusive="true" />
-        <argument
-            android:name="programID"
-            app:argType="string" />
-    </fragment>
+    <navigation android:id="@+id/ManagePrograms"
+        app:startDestination="@id/manageProgramFragment">
+        <fragment
+            android:id="@+id/manageProgramFragment"
+            android:name="com.saboon.timetable.Fragments.ManageProgramFragment"
+            android:label="fragment_manage_program"
+            tools:layout="@layout/fragment_manage_program">
+            <action
+                android:id="@+id/action_manageProgramFragment_to_mainFragment"
+                app:destination="@id/mainFragment"
+                app:popUpTo="@id/mainFragment"
+                app:popUpToInclusive="true"
+                app:popUpToSaveState="true" />
+            <action
+                android:id="@+id/action_manageProgramFragment_to_editProgramFragment"
+                app:destination="@id/editProgramFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/editProgramFragment"
+            android:name="com.saboon.timetable.Fragments.EditProgramFragment"
+            android:label="fragment_edit_program"
+            tools:layout="@layout/fragment_edit_program">
+            <action
+                android:id="@+id/action_editProgramFragment_to_manageProgramFragment"
+                app:destination="@id/manageProgramFragment"
+                app:popUpTo="@id/manageProgramFragment"
+                app:popUpToInclusive="true" />
+            <argument
+                android:name="programID"
+                app:argType="string" />
+        </fragment>
+    </navigation>
 </navigation>
