fixed some problems

--- a/app/src/main/res/layout/fragment_add_edit_lessons.xml
+++ b/app/src/main/res/layout/fragment_add_edit_lessons.xml
@@ -94,16 +94,23 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragmentAddLesson_textField_maxAbsenteeism"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:hint="Max. Absenteeism"
+            app:endIconMode="clear_text"
+            app:startIconDrawable="@drawable/ic_baseline_done_24">
 
-        <!--        <TextView-->
-        <!--            geicici bir sureligine devre disi-->
-        <!--            android:id="@+id/framentDetails_textView_absenteeism"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:text="Absenteeism: 2"-->
-        <!--            android:textAlignment="textEnd"-->
-        <!--            android:layout_marginTop="5dp"/>-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fragmentAddLesson_editText_maxAbsenteeism"
+                android:layout_width="match_parent"
+                android:inputType="numberDecimal"
+                android:layout_height="wrap_content" />
 
+        </com.google.android.material.textfield.TextInputLayout>
 
         <View
             android:layout_width="match_parent"
